# learn-opengl

./: CMakeLists.txt
include/: shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: basic.frag  basic.vert
